--- a/Code/index.html
+++ b/Code/index.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
+
+        <div class="container">
+            <div class="Navbar"></div>
+            <div class="Greeting"></div>
+            <div class="Profile-Picture"></div>
+            <div class="Abstract-Figure"></div>
+            <div class="Footer "></div>
+          </div>
+
         <!--Navigation menu-->
         <header id="navbar">
             <div class="left-header">
